# app/Http/Controllers/Api/MemberController.php
@@ -17,6 +17,7 @@ use App\Services\DepartmentService;
 use App\Services\EducationService;
 use App\Http\Resources\TalentResource;
 use App\Services\FacultyService;
+use App\Http\Requests\CheckMemberAgeRequest;
 use App\Http\Requests\CheckMemberExistsRequest;
 use App\Http\Requests\FilterMemberRequest;
 use App\Http\Requests\StoreMemberRequest;
@@ -77,6 +78,13 @@ class MemberController extends Controller
         return MemberResource::collection(
             $this->memberService->findPotentialDuplicates($request->validated())
         )->response()->setStatusCode(ResponseAlias::HTTP_OK);
+    }
+
+    public function checkAge(CheckMemberAgeRequest $request): JsonResponse
+    {
+        return response()->json([
+            'data' => $this->memberService->checkAge($request->validated('date_birthday')),
+        ], ResponseAlias::HTTP_OK);
     }
 
     public function store(StoreMemberRequest $request): JsonResponse
